[package]
name = "macro9_configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.3"
simple_crc = { git = "https://github.com/paunstefan/simple_crc" }
serialport = "4.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3.0"